--- a/recipEats/package.json
+++ b/recipEats/package.json
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> 9721173421d9ed4f9ecb173e75e278e6732ee141
 {
   "scripts": {
     "postinstall": "jetify",
@@ -14,6 +10,7 @@
   "dependencies": {
     "clarifai": "^2.9.1",
     "expo": "^35.0.0",
+    "expo-camera": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
